# AlphaForge

./: .env.example  .gitignore  AGENT.md  PROJECT_BRIEF.md  README.md  pyproject.toml
docs/: alphaforge_park_handoff.md
openspec/: config.yaml
sample_data/: sample_ohlcv.csv  twse_2330_2018.csv  twse_2330_2018_2025.csv  twse_2330_2019.csv  twse_2330_2020.csv  twse_2330_2021.csv  twse_2330_2022.csv  twse_2330_2023.csv  twse_2330_2023_2024.csv  twse_2330_2024.csv  twse_2330_2024_01_test.csv  twse_2330_2024q1.csv  twse_2330_2025.csv
scripts/: read_memory.py  rebuild_venv.ps1  run_verification.ps1
src/: obsidian_logger.py
src/alphaforge/: __init__.py  backtest.py  benchmark.py  cli.py  config.py  custom_signal.py  data_loader.py  evidence.py  evidence_diagnostics.py  experiment_runner.py  metrics.py  permutation.py  policy.py  policy_types.py  report.py  research_policy.py  runner_protocols.py  runner_workflows.py  schemas.py  scoring.py  search.py  search_reporting.py  storage.py  (+4 more)
src/alphaforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_backtest.py  test_benchmark.py  test_cli.py  test_custom_signal.py  test_data_loader.py  test_evidence.py  test_metrics.py  test_permutation.py  test_policy.py  test_policy_type_contracts.py  test_report.py  test_research_policy.py  test_runner.py  test_runner_protocols.py  test_search_scoring.py  test_storage.py  test_strategy_breakout.py  test_strategy_ma.py  test_strategy_registry.py  test_twse_client.py  test_validation.py  test_visualization.py  test_walk_forward_aggregation.py
(+280 files in other folders)
