[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge"
version = "0.1.0"
description = "Minimum viable strategy research engine for reproducible backtests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.0.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
alphaforge = "alphaforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
